fix the small images to align with the center image

--- a/first_project/css/styles.css
+++ b/first_project/css/styles.css
@@ -3,11 +3,11 @@
 
 }
 .small-images {
-    width: 271px;
+    width: 100%;
     height: 186px;
 }
 .small-images-container,
-.top-row {
+.top-row, .footer {
     margin-top: 30px;
 }
 .center-image {
@@ -15,7 +15,11 @@
 }
 .line {
     width: 100%;
-}
-hr {
     border: 3px solid #7d97ad;
+}
+.top-text {
+    text-align: right;
+}
+.images-titles, .footer-text {
+    text-align: center;
 }
